# ppt-voice-agent

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  tree.txt
src/: __init__.py  agent.py  agent_temp.py  config.py
src/avatar/: anam_avatar.py  persona.py
src/core/: supabase.py
src/llm/: llm.py  persona.py
src/utils/: safety.py
